Revert "Can now be built using Java 8 also"
This reverts commit 83160459572f6d26466e0bb157f5fb597ea98e2a.